Changelog for HLint

    #240, if a then True else False no longer suggests a || False
    Upgrade to haskell-src-exts-1.7.*
    #236, support changing the text encoding with --encoding/--utf8
    #260, generate nicer lambdas for (($) . f)
    Add the hint (($) . f) ==> (f $)
1.6.16
    Further performance enhancements (for details see my blog)
    Update to uniplate 1.5.* (fixes performance bug)
    Improve speed based on profiling (roughly twice as fast)
    #245, add hints for excess brackets in types and patterns
    Make 100% redundant brackets an error
    Fix bug where qualified names did not match
    Remove dependency on SYB
    #234, allow TH top-level splices for ignore
    #110, add tests for ignoring commands
1.6.15
    Upgrade to uniplate 1.4.* (fixes performance bug)
    #192, make HLint into a fairly basic library
    Add --datadir to allow running with a different data directory
    #254, eliminate foldl/map fusion rules (which were untrue)
    Fix a few typos in the hint rules
    Upgrade to uniplate 1.3.*
    Upgrade to haskell-src-exts 1.6.*
    Add a .ghci file snippet
    #247, Fix bug matching expressions containing position info
1.6.14
    Upgrade to haskell-src-exts 1.5.*
1.6.13
    #246, redundant brackets in [(...)]
    Add fold/map fusion hints
    Don't suggest namings that are already used in the module
    #239, Add suggestions of and/or on foldl
    Add --extension flag, to find files not named .hs/.lhs
    Only activate the builtin hints when they are imported
    Fix matching bug, said "Use flip" on "\v -> f v . g"
    Suggest changing some pattern guards to view patterns
1.6.12
    Fix a bug with ignored hints being written to reports
    Upgrade to haskell-src-exts 1.3.*
    #228, suggest let instead of <- return in do statements
    #229, suggest comparing
    Qualify all non-Prelude function suggestions
    #225, Add redundant flip hint
    #226, Add ((+) x) ==> (x +)